updated swagger and dockerfile
